--- a/artist_bio.html
+++ b/artist_bio.html
@@ -48,8 +48,9 @@
   <main class="main" style="padding: 2rem">
 
     <section id="bio-intro">
-      <h2>About Ann K. Chou</h2>
-      <p>Hard-of-hearing, neurodivergent, Hong Kong–born visual artist based in Victoria and Vancouver, BC. I work with lanterns, light, shadow, and reclaimed materials to create tactile and adaptive installations shaped by access, ecology, and care.</p>
+      <h1>About Ann K. Chou</h1>
+      <h2>Artist, Access Designer, and Artist-Scientist</h2>
+     <p>Ann K. Chou (she/her) is a hard-of-hearing, neurodivergent, Hong Kong–born artist and access designer, currently active on the unceded lands of the ləķʗəŋən (Songhees and Esquimalt) and xʋməθkʋə̓ɛm (Musqueam) peoples—also known as Victoria and Vancouver, BC.</p>
     </section>
 
     <!-- ✅ Eco-Illum Tile Figure -->
