--- a/artist_bio.html
+++ b/artist_bio.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>Artist Bio – Ann K. Chou</title>
-  <meta name="description" content="Learn more about Ann K. Chou: a Deaf and neurodivergent artist working with lanterns, light, sumi-e, and access-based installation. Her practice merges art, ecology, and inclusive design." />
+  <meta name="description" content="Learn more about Ann K. Chou: a hard-of-hearing and neurodivergent artist, access designer, ,artist-scientist  working with lanterns, light, sumi-e, and access-based installation. Her practice merges art, ecology, and inclusive design." />
 	<meta name="keywords" content="Ann Chou bio, Deaf artist, disability arts, inclusive installation, sumi-e, artist biography, Victoria BC, Vancouver, neurodivergent artists, lantern sculpture" />
 	<meta name="author" content="Ann K. Chou" />
 	<meta property="og:title" content="Artist Bio – Ann K. Chou" />
@@ -48,9 +48,9 @@
   <main class="main" style="padding: 2rem">
 
     <section id="bio-intro">
-      <h1>About Ann K. Chou</h1>
-      <h2>Artist, Access Designer, and Artist-Scientist</h2>
-     <p>Ann K. Chou (she/her) is a hard-of-hearing, neurodivergent, Hong Kong–born artist and access designer, currently active on the unceded lands of the ləķʗəŋən (Songhees and Esquimalt) and xʋməθkʋə̓ɛm (Musqueam) peoples—also known as Victoria and Vancouver, BC.</p>
+      <h1>About Me -  Ann K. Chou</h1>
+      <h2>(she/her) Artist, Access Designer, and Artist-Scientist</h2>
+     <p>I am a hard-of-hearing, neurodivergent, Hong Kong–born artist and access designer, currently active on the unceded lands of the ləķʗəŋən (Songhees and Esquimalt) and xʋməθkʋə̓ɛm (Musqueam) peoples—also known as Victoria and Vancouver, BC.</p>
     </section>
 
     <!-- ✅ Eco-Illum Tile Figure -->
