--- a/artist_bio.html
+++ b/artist_bio.html
@@ -60,13 +60,13 @@
     </figure>
 
     <section id="artistic-journey">
-      <h2>From Microscope to Lantern Light</h2>
+      <h3>From Microscope to Lantern Light</h3>
       <p>My artistic path began in microscopy photography during my early studies in Medical Laboratory Science—capturing intimate, unseen landscapes of life. As I worked in healthcare and informatics, I continued to explore photography, pottery, and community festival arts, discovering the expressive potential of light and texture.</p>
       <p>Eventually, lantern-building became my medium: an accessible, communal, and sensory-rich language that could travel across both public spaces and diverse bodies. It led me toward installation, projection, puppetry, and ink brushwork—always guided by a respect for materials and the wisdom of lived experience.</p>
     </section>
 
     <section id="annreflection">
-      <h2>Annreflection: A Practice of Listening and Illumination</h2>
+      <h3>Annreflection: A Practice of Listening and Illumination</h3>
       <p>Annreflection is where material meets meaning. I create multisensory works from upcycled paper, garden clippings, clear plastics, mesh, fabric, and vines—making space for stories beyond words. My work honors fragmentation and transformation: I believe materials, like people, can be broken and reformed in ways that carry light.</p>
       <p>Each lantern, shadow-stage, or brush painting is an invitation—to pause, to reflect, to adapt. Whether in storefront windows or woodland trails, I design with mobility, texture, and tenderness in mind.</p>
     </section>
@@ -82,7 +82,13 @@
       </ul>
     </section>
 
-    <section id="mission-driven">
+    <section id="ethnography-dialogue">
+        <h2>Art × Technology as Ethnography and Dialogue</h2>
+	<p> Over more than 15 years working in hospitals and digital health, I’ve applied data visualization, ethnographic methods, and participatory co-design to digitally mediated care. I often met people in their everyday environments and brought a sense of critical hope into the design of personal health records—encouraging patients to express their experiences in ways that felt natural and meaningful to them.
+        <p> In one co-design project exploring personal health records and agency, we discovered that even technologies carry personas. Tools revealed themselves not as neutral, mundane interfaces, but as expressive, symbolic beings—like butterflies, bats, dogs, and altars. These metaphors surfaced the emotional and cultural dimensions of care technologies, and they continue to shape how I design lanterns, workshops, and interactive experiences today.
+    </section>
+	  
+   <section id="mission-driven">
       <h2>Let’s Collaborate to Build Access and Meaning</h2>
       <p>I welcome commissions, storefront activations, and cross-sector collaborations at the intersection of art, accessibility, and community care. With a background in healthcare and inclusive design, I bring a systems-informed approach to lantern-based artmaking that is adaptable, participatory, and environmentally responsive. I invite partners across cultural, civic, and access-related sectors to help shape multisensory public experiences that are both artistically resonant and socially meaningful.</p>
     </section>
