--- a/artist_bio.html
+++ b/artist_bio.html
@@ -3,13 +3,13 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Artist Bio – Ann K. Chou</title>
-  <meta name="description" content="Learn more about Ann K. Chou: a hard-of-hearing and neurodivergent artist, access designer, ,artist-scientist  working with lanterns, light, sumi-e, and access-based installation. Her practice merges art, ecology, and inclusive design." />
-	<meta name="keywords" content="Ann Chou bio, Deaf artist, disability arts, inclusive installation, sumi-e, artist biography, Victoria BC, Vancouver, neurodivergent artists, lantern sculpture" />
-	<meta name="author" content="Ann K. Chou" />
-	<meta property="og:title" content="Artist Bio – Ann K. Chou" />
-	<meta property="og:description" content="A sensory-based art practice rooted in accessibility, storytelling, and ecological ritual." />
-	<meta property="og:image" content="https://annchou.github.io/images/AnnChou_Ecoillum_tile.png" />
+  <title>Ann K. Chou – Artist, Access Designer, Artist-Scientist</title>
+  <meta name="description" content="Ann K. Chou is a hard-of-hearing, neurodivergent artist, access designer, and artist-scientist working with lanterns, sumi-e, light, and inclusive installation. Her practice bridges art, ecology, and care systems through multisensory design." />	
+  <meta name="keywords" content="Ann K. Chou, Deaf artist, neurodivergent artist, disability arts, inclusive design, lantern sculpture, sumi-e, access-based installation, Victoria BC, Vancouver artist, artist-scientist, healthcare and art" />	
+  <meta name="author" content="Ann K. Chou" />
+  <meta property="og:title" content="Ann K. Chou – Artist, Access Designer, Artist-Scientist" />
+  <meta property="og:description" content="A multisensory art practice rooted in accessibility, storytelling, and ecological ritual. Ann K. Chou creates lanterns, installations, and workshops that bridge science, care, and creativity." />	
+	<meta property="og:image" content="https://annchou.github.io/rss/AnnChou_Ecoillum_tile.png" />
 	<meta property="og:url" content="https://annchou.github.io/artist-bio.html" />
 	<meta name="twitter:card" content="summary_large_image" />
 	<link rel="stylesheet" href="css/style_resp.css" />
@@ -55,25 +55,25 @@
 
     <!-- ✅ Eco-Illum Tile Figure -->
     <figure class="rabbit-figure">
-      <img src="images/AnnChou_Ecoillum_tile.png" alt="Four-panel collage showing Ann K. Chou’s immersive lantern and shadow installations: Top left—scrolls, sumi-e ink paintings, and translucent layers lit from behind; Top right—close-up of layered brushwork, foliage, and glowing emblem projection; Bottom left—artist and audience interact beneath umbrellas in a room bathed in moving rainbow lights; Bottom right—artist kneels next to fabric lantern sculptures, casting vibrant red and blue shadows on the wall." />
+      <img src="rss/AnnChou_Ecoillum_tile.png" alt="Four-panel collage showing Ann K. Chou’s immersive lantern and shadow installations: Top left—scrolls, sumi-e ink paintings, and translucent layers lit from behind; Top right—close-up of layered brushwork, foliage, and glowing emblem projection; Bottom left—artist and audience interact beneath umbrellas in a room bathed in moving rainbow lights; Bottom right—artist kneels next to fabric lantern sculptures, casting vibrant red and blue shadows on the wall." />
       <figcaption>Eco-Illum Essence: immersive installation of sumi-e, projection, and light-based performance with community.</figcaption>
     </figure>
 
     <section id="artistic-journey">
-      <h3>From Microscope to Lantern Light</h3>
-      <p>My artistic path began in microscopy photography during my early studies in Medical Laboratory Science—capturing intimate, unseen landscapes of life. As I worked in healthcare and informatics, I continued to explore photography, pottery, and community festival arts, discovering the expressive potential of light and texture.</p>
+      <h2>From Microscope to Lantern Light</h2>
+      <p>My creative path began in microscopy photography during my early studies in Medical Laboratory Science—capturing intimate, unseen landscapes of life. As I worked in healthcare and informatics, I continued to explore photography, pottery, and community festival arts, discovering the expressive potential of light and texture.</p>
       <p>Eventually, lantern-building became my medium: an accessible, communal, and sensory-rich language that could travel across both public spaces and diverse bodies. It led me toward installation, projection, puppetry, and ink brushwork—always guided by a respect for materials and the wisdom of lived experience.</p>
     </section>
 
     <section id="annreflection">
-      <h3>Annreflection: A Practice of Listening and Illumination</h3>
+      <h2>Annreflection: A Practice of Listening and Illumination</h2>
       <p>Annreflection is where material meets meaning. I create multisensory works from upcycled paper, garden clippings, clear plastics, mesh, fabric, and vines—making space for stories beyond words. My work honors fragmentation and transformation: I believe materials, like people, can be broken and reformed in ways that carry light.</p>
       <p>Each lantern, shadow-stage, or brush painting is an invitation—to pause, to reflect, to adapt. Whether in storefront windows or woodland trails, I design with mobility, texture, and tenderness in mind.</p>
     </section>
 
     <section id="access-statement">
       <h2>Accessibility as Creative Foundation</h2>
-      <p>As a Deaf and neurodivergent artist, I prioritize design for inclusion, not afterthought. My performances are often non-verbal. My exhibitions and workshops welcome alternative pacing, communication, and sensory experience.</p>
+      <p>As a deaf and neurodivergent artist, I prioritize design for inclusion, not afterthought. My performances are often non-verbal. My exhibitions and workshops welcome alternative pacing, communication, and sensory experience.</p>
       <ul>
         <li>Visually expressive, low-audio formats</li>
         <li>Light, texture, projection, and scent for multi-sensory access</li>
@@ -84,20 +84,22 @@
 
     <section id="ethnography-dialogue">
         <h2>Art × Technology as Ethnography and Dialogue</h2>
-	<p> Over more than 15 years working in hospitals and digital health, I’ve applied data visualization, ethnographic methods, and participatory co-design to digitally mediated care. I often met people in their everyday environments and brought a sense of critical hope into the design of personal health records—encouraging patients to express their experiences in ways that felt natural and meaningful to them.
-        <p> In one co-design project exploring personal health records and agency, we discovered that even technologies carry personas. Tools revealed themselves not as neutral, mundane interfaces, but as expressive, symbolic beings—like butterflies, bats, dogs, and altars. These metaphors surfaced the emotional and cultural dimensions of care technologies, and they continue to shape how I design lanterns, workshops, and interactive experiences today.
+	<p>Over more than 15 years working in hospitals and digital health, I’ve applied data visualization, ethnographic methods, and participatory co-design to digitally mediated care. I often met people in their everyday environments and brought a sense of critical hope into the design of personal health records—encouraging patients to express their experiences in ways that felt natural and meaningful to them.
+	<p>In one co-design project exploring personal health records and agency, we discovered that even technologies carry personas. These tools revealed themselves not as neutral or mundane interfaces, but as expressive, symbolic beings—like butterflies, bats, dogs, and altars. These metaphors surfaced the emotional and cultural dimensions of care technologies, and they continue to shape how I design lanterns, workshops, and interactive experiences today.
+	<p>As a <b>hard-of-hearing, neurodivergent artist-scientist and access designer</b>, I often rely on <b>non-verbal, visual-spatial modes of reflection</b>. My practice embraces alternative forms of communication—through light, movement, texture, and metaphor—to create spaces where data, care, and creativity can coexist. Whether in a clinical setting or a public art installation, I see each project as a dialogue: between systems and stories, between structure and softness.   
     </section>
 	  
    <section id="mission-driven">
-      <h2>Let’s Collaborate to Build Access and Meaning</h2>
-      <p>I welcome commissions, storefront activations, and cross-sector collaborations at the intersection of art, accessibility, and community care. With a background in healthcare and inclusive design, I bring a systems-informed approach to lantern-based artmaking that is adaptable, participatory, and environmentally responsive. I invite partners across cultural, civic, and access-related sectors to help shape multisensory public experiences that are both artistically resonant and socially meaningful.</p>
-    </section>
+      	<h2>Let’s Collaborate to Build Access and Meaning</h2>
+	<p>I welcome commissions, storefront activations, and cross-sector collaborations at the intersection of art, accessibility, and community care. With a background in healthcare and inclusive design, I bring a systems-informed approach to lantern-based artmaking that is adaptable, participatory, and environmentally responsive.
+	<p>I invite partners across cultural, civic, and access-related sectors to help shape multisensory public experiences that are both artistically resonant and socially meaningful.  
+   </section>
 
     <section id="easy-read-bio">
       <h2>✨ Easy Read Bio</h2>
-      <p>Hello! I’m Ann. I’m a Deaf and neurodivergent artist living in Victoria, BC.</p>
+      <p>Hello! I’m Ann. I’m a Deaf and neurodivergent artist based in Victoria and Vancouver, BC.</p>
       <ul>
-        <li>I make lanterns out of paper, light, vines, and plastic.</li>
+        <li>I make lanterns out of fabric, paper, light, vines, and plastic.</li>
         <li>I paint with black ink on translucent surfaces (called sumi-e).</li>
         <li>I build puppets and small stages using boxes and recycled materials.</li>
         <li>I perform without speaking—using movement, light, and shadow.</li>
