--- a/artist_bio.html
+++ b/artist_bio.html
@@ -53,11 +53,19 @@
      <p>I am a hard-of-hearing, neurodivergent, Hong Kong–born artist and access designer, currently active on the unceded lands of the ləķʗəŋən (Songhees and Esquimalt) and xʋməθkʋə̓ɛm (Musqueam) peoples—also known as Victoria and Vancouver, BC.</p>
     </section>
 
-    <!-- ✅ Eco-Illum Tile Figure -->
-    <figure class="rabbit-figure">
-      <img src="rss/AnnChou_Ecoillum_tile.png" alt="Four-panel collage showing Ann K. Chou’s immersive lantern and shadow installations: Top left—scrolls, sumi-e ink paintings, and translucent layers lit from behind; Top right—close-up of layered brushwork, foliage, and glowing emblem projection; Bottom left—artist and audience interact beneath umbrellas in a room bathed in moving rainbow lights; Bottom right—artist kneels next to fabric lantern sculptures, casting vibrant red and blue shadows on the wall." />
-      <figcaption>Eco-Illum Essence: immersive installation of sumi-e, projection, and light-based performance with community.</figcaption>
-    </figure>
+	<!-- ✅ Triple Identity Banner with ARIA -->
+	<figure class="rabbit-figure" role="group" aria-labelledby="triple-identity-caption">
+	  <img 
+	    src="rss/triple-identity-bio.png" 
+	    alt="A triptych banner introducing Ann K. Chou’s identities. Left panel: 'Scientist' with a whimsical anatomical illustration. Center panel: 'Access Designer' showing a person with a guide dog in front of a 'Service & Guide Dogs Welcome' sign. Right panel: 'Multi-Sensory Artist' featuring tactile and shadow-based art installations." 
+	    role="img" 
+	    aria-describedby="triple-identity-caption"
+	  />
+	  <figcaption id="triple-identity-caption">
+	    <strong>Triple Identity</strong>: Ann K. Chou as Scientist, Access Designer, and Multi-Sensory Artist—interweaving disciplines and lived experience.
+	  </figcaption>
+	</figure>
+
 
     <section id="artistic-journey">
       <h2>From Microscope to Lantern Light</h2>
