--- a/artist_bio.html
+++ b/artist_bio.html
@@ -51,9 +51,11 @@
       <h1>About Me -  Ann K. Chou</h1>
       <h2>(she/her) Artist, Access Designer, and Artist-Scientist</h2>
      <p>I am a hard-of-hearing, neurodivergent, Hong Kong–born artist and access designer, currently active on the unceded lands of the ləķʗəŋən (Songhees and Esquimalt) and xʋməθkʋə̓ɛm (Musqueam) peoples—also known as Victoria and Vancouver, BC.</p>
+    </section>
 
-
-	<!-- ✅ Triple Identity Banner with ARIA -->
+  <!-- ✅ Triple Identity Banner with ARIA -->
+  <section id="triple-identity" aria-labelledby="triple-identity-caption">
+	  	<!-- ✅ Triple Identity Banner with ARIA -->
 	<figure class="rabbit-figure" role="group" aria-labelledby="triple-identity-caption">
 	  <img 
 	    src="rss/triple-identity-bio.png" 
@@ -65,8 +67,8 @@
 	    <strong>Triple Identity</strong>: Ann K. Chou as Scientist, Access Designer, and Multi-Sensory Artist—interweaving disciplines and lived experience.
 	  </figcaption>
 	</figure>
-    </section>
-
+  </section>
+	  
     <section id="artistic-journey">
       <h2>From Microscope to Lantern Light</h2>
       <p>My creative path began in microscopy photography during my early studies in Medical Laboratory Science—capturing intimate, unseen landscapes of life. As I worked in healthcare and informatics, I continued to explore photography, pottery, and community festival arts, discovering the expressive potential of light and texture.</p>
