--- a/artist_bio.html
+++ b/artist_bio.html
@@ -47,27 +47,29 @@
 
   <main class="main" style="padding: 2rem">
 
+  <!-- ✅ Triple Identity Banner with ARIA, Parallax Effect -->
+	<section id="triple-identity" aria-labelledby="triple-identity-caption">
+	  <div class="parallax-banner">
+	    <figure class="rabbit-figure" role="group" aria-labelledby="triple-identity-caption">
+	      <img 
+	        src="rss/triple-identity-bio.png" 
+	        alt="A triptych banner introducing Ann K. Chou’s identities. Left panel: 'Scientist' with a whimsical anatomical illustration. Center panel: 'Access Designer' showing a person with a guide dog in front of a 'Service & Guide Dogs Welcome' sign. Right panel: 'Multi-Sensory Artist' featuring tactile and shadow-based art installations." 
+	        role="img" 
+	        aria-describedby="triple-identity-caption"
+	      />
+	      <figcaption id="triple-identity-caption">
+	        <strong>Triple Identity</strong>: Ann K. Chou as Scientist, Access Designer, and Multi-Sensory Artist—interweaving disciplines and lived experience.
+	      </figcaption>
+	    </figure>
+	  </div>
+	</section>
+	  
     <section id="bio-intro">
       <h1>About Me -  Ann K. Chou</h1>
       <h2>(she/her) Artist, Access Designer, and Artist-Scientist</h2>
      <p>I am a hard-of-hearing, neurodivergent, Hong Kong–born artist and access designer, currently active on the unceded lands of the ləķʗəŋən (Songhees and Esquimalt) and xʋməθkʋə̓ɛm (Musqueam) peoples—also known as Victoria and Vancouver, BC.</p>
     </section>
 
-  <!-- ✅ Triple Identity Banner with ARIA -->
-  <section id="triple-identity" aria-labelledby="triple-identity-caption">
-	  	<!-- ✅ Triple Identity Banner with ARIA -->
-	<figure class="rabbit-figure" role="group" aria-labelledby="triple-identity-caption">
-	  <img 
-	    src="rss/triple-identity-bio.png" 
-	    alt="A triptych banner introducing Ann K. Chou’s identities. Left panel: 'Scientist' with a whimsical anatomical illustration. Center panel: 'Access Designer' showing a person with a guide dog in front of a 'Service & Guide Dogs Welcome' sign. Right panel: 'Multi-Sensory Artist' featuring tactile and shadow-based art installations." 
-	    role="img" 
-	    aria-describedby="triple-identity-caption"
-	  />
-	  <figcaption id="triple-identity-caption">
-	    <strong>Triple Identity</strong>: Ann K. Chou as Scientist, Access Designer, and Multi-Sensory Artist—interweaving disciplines and lived experience.
-	  </figcaption>
-	</figure>
-  </section>
 	  
     <section id="artistic-journey">
       <h2>From Microscope to Lantern Light</h2>
