--- a/artist_bio.html
+++ b/artist_bio.html
@@ -50,7 +50,7 @@
   <!-- ✅ Triple Identity Banner with ARIA, Parallax Effect -->
 	<section id="triple-identity" aria-labelledby="triple-identity-caption">
 	  <div class="parallax-banner">
-	    <figure class="rabbit-figure" role="group" aria-labelledby="triple-identity-caption">
+	    <figure class="figure-block bio-figure" role="group" aria-labelledby="triple-identity-caption">
 	      <img 
 	        src="rss/triple-identity-bio.png" 
 	        alt="A triptych banner introducing Ann K. Chou’s identities. Left panel: 'Scientist' with a whimsical anatomical illustration. Center panel: 'Access Designer' showing a person with a guide dog in front of a 'Service & Guide Dogs Welcome' sign. Right panel: 'Multi-Sensory Artist' featuring tactile and shadow-based art installations." 
