--- a/artist_bio.html
+++ b/artist_bio.html
@@ -79,8 +79,8 @@
     </section>
 
     <section id="annreflection">
-      <h2>Annreflection: A Practice of Listening and Illumination</h2>
-      <p>Annreflection is where material meets meaning. I create multisensory works from upcycled paper, garden clippings, clear plastics, mesh, fabric, and vines—making space for stories beyond words. My work honors fragmentation and transformation: I believe materials, like people, can be broken and reformed in ways that carry light.</p>
+      <h2>Annreflection Studio: A Practice of Listening and Illumination</h2>
+      <p>Annreflection Studio is where material meets meaning. I create multisensory works from upcycled paper, garden clippings, clear plastics, mesh, fabric, and vines—making space for stories beyond words. My work honors fragmentation and transformation: I believe materials, like people, can be broken and reformed in ways that carry light.</p>
       <p>Each lantern, shadow-stage, or brush painting is an invitation—to pause, to reflect, to adapt. Whether in storefront windows or woodland trails, I design with mobility, texture, and tenderness in mind.</p>
     </section>
 
