--- a/artist_bio.html
+++ b/artist_bio.html
@@ -49,11 +49,11 @@
 
   <!-- ✅ Floating Social Icon Bar -->
   <div class="icon-bar" aria-label="Social media links">
-    <a href="https://www.instagram.com/annreflection/" aria-label="Instagram"><i class="fa fa-instagram"></i></a>
-    <a href="https://www.facebook.com/AnnReflectionArts/" aria-label="Facebook"><i class="fa fa-facebook"></i></a>
-    <a href="https://linkedin.com/in/annkchou" aria-label="LinkedIn"><i class="fa fa-linkedin"></i></a>
-    <a href="https://www.youtube.com/@annchou9171" aria-label="YouTube"><i class="fa fa-youtube"></i></a>
-    <a href="https://www.flickr.com/photos/annchou/" aria-label="Flickr"><i class="fa fa-flickr"></i></a>
+    <a href="https://www.instagram.com/annreflection/" class="instagram" aria-label="Instagram"><i class="fa fa-instagram"></i></a>
+    <a href="https://www.facebook.com/AnnReflectionArts/" class="facebook" aria-label="Facebook"><i class="fa fa-facebook"></i></a>
+    <a href="https://linkedin.com/in/annkchou" class="linkedin" aria-label="LinkedIn"><i class="fa fa-linkedin"></i></a>
+    <a href="https://www.youtube.com/@annchou9171" class="youtube" aria-label="YouTube"><i class="fa fa-youtube"></i></a>
+    <a href="https://www.flickr.com/photos/annchou/" class="flickr" aria-label="Flickr"><i class="fa fa-flickr"></i></a>
     <a href="https://annreflection.substack.com" class="substack"><i class="fa fa-stack-exchange"></i></a>
   </div>
 
