--- a/artist_bio.html
+++ b/artist_bio.html
@@ -53,7 +53,7 @@
     <a href="https://www.facebook.com/AnnReflectionArts/" class="facebook" aria-label="Facebook"><i class="fa fa-facebook"></i></a>
     <a href="https://linkedin.com/in/annkchou" class="linkedin" aria-label="LinkedIn"><i class="fa fa-linkedin"></i></a>
     <a href="https://www.youtube.com/@annchou9171" class="youtube" aria-label="YouTube"><i class="fa fa-youtube"></i></a>
-    <a href="https://www.flickr.com/photos/annchou/" class="flickr" aria-label="Flickr"><i class="fa fa-flickr"></i></a>
+    <a href="https://www.flickr.com/photos/annchou/" class="twitter" aria-label="Flickr"><i class="fa fa-flickr"></i></a>
     <a href="https://annreflection.substack.com" class="substack"><i class="fa fa-stack-exchange"></i></a>
   </div>
 
