--- a/artist_bio.html
+++ b/artist_bio.html
@@ -114,6 +114,11 @@
 	<p>In one co-design project exploring personal health records and agency, we discovered that even technologies carry personas. These tools revealed themselves not as neutral or mundane interfaces, but as expressive, symbolic beings—like butterflies, bats, dogs, and altars. These metaphors surfaced the emotional and cultural dimensions of care technologies, and they continue to shape how I design lanterns, workshops, and interactive experiences today.
 	<p>As a <b>hard-of-hearing, neurodivergent artist-scientist and access designer</b>, I often rely on <b>non-verbal, visual-spatial modes of reflection</b>. My practice embraces alternative forms of communication—through light, movement, texture, and metaphor—to create spaces where data, care, and creativity can coexist. Whether in a clinical setting or a public art installation, I see each project as a dialogue: between systems and stories, between structure and softness.   
     </section>
+
+    <section id="technology-philosophy">
+	<h2>Technology Is Never Neutral</h2>
+	<p>My work explores not just how we use technology—but what technology is. At SFU, I studied its nature as both tool and relationship: shaped by values, pace, and purpose. I see paper, fabric, and light as “slow technologies” that invite care, not control. Through participatory co-design, multisensory methods, and storytelling, I design for relational access and shared meaning—whether in health systems or public art. Technology is never neutral; it reflects how we live, feel, and imagine together.</p>
+    </section>
 	  
    <section id="mission-driven">
       	<h2>Let’s Collaborate to Build Access and Meaning</h2>
