--- a/artist_bio.html
+++ b/artist_bio.html
@@ -137,6 +137,21 @@
       </ul>
       <p>My art welcomes everyone. You do not need to hear or speak to enjoy it. I love to co-create projects that are fun, gentle, and accessible for all.</p>
     </section>
+ 
+   < section id="connect-call">
+      <h2>Stay Connected & Co-Create</h2>
+      <p>   Want to bring a lantern-making or sumi-e storytelling workshop to your school, gallery, or organization? Let’s co-create accessible, sensory experiences together.
+      </p>
+       <p>	    You can also support my small-scale art practice and creative research: 	  </p>
+       <ul>
+	    <li>✨ <a href="https://ko-fi.com/annreflection" target="_blank">Support small art or buy a sketch via Ko-fi</a></li>
+	    <li>👜 <a href="https://annreflection.square.site/" target="_blank">Browse lantern pieces and kits in my Art Shop</a></li>
+	    <li>📫 <a href="https://annreflection.substack.com" target="_blank">Read and reply to my Substack newsletter</a> — where I share insights across sumi-e, lantern building, access design, and service transformation</li>
+	  </ul>
+	<p>
+	    I’d love to hear what kind of content you’d like more of — art techniques, access culture, reflections on care, or project walkthroughs? <strong>Reply anytime on Substack or email me at annreflection at gmail dot com.</strong>
+        </p>
+    </section>
 
   </main>
 
