--- a/artist_bio.html
+++ b/artist_bio.html
@@ -39,7 +39,18 @@
       <a class="active" href="artist-bio.html">Bio 🧬</a>
       <a href="Eco_illum.html">Eco-Illum 🌘</a>
       <a href="workshops.html">Workshops 🎨</a>
-      <a href="https://annreflection.square.site/">ArtShop and Tiny Arts 👜</a>
+
+      <!-- temp shop -->
+      <div class="dropdown">
+        <a href="#" class="dropbtn">Shop 👜</a>
+        <div class="dropdown-content">
+          <a href="https://annreflection.square.site/shop/sumi-e-painting-large-banner/7">Original Paintings</a>
+          <a href="https://ko-fi.com/c/e004b270d4">Cards & Commissions ($6)</a>
+          <a href="https://annreflectionarts.square.site/shop/suprise-packs/25">Surprise Packs ($5)</a>
+          <a href="https://register.inclusionartshow.com/product-category/ann-k-chou/">Inclusion Art Show</a>
+        </div>
+      </div>
+	    
       <button id="darkModeToggle" class="button-ghost" onclick="toggleDarkMode()">🌙</button>
       <a href="javascript:void(0);" class="icon" onclick="myFunction()">
         <i class="fa fa-bars"></i>
@@ -138,20 +149,25 @@
       <p>My art welcomes everyone. You do not need to hear or speak to enjoy it. I love to co-create projects that are fun, gentle, and accessible for all.</p>
     </section>
  
-   < section id="connect-call">
-      <h2>Stay Connected & Co-Create</h2>
-      <p>   Want to bring a lantern-making or sumi-e storytelling workshop to your school, gallery, or organization? Let’s co-create accessible, sensory experiences together.
-      </p>
-       <p>	    You can also support my small-scale art practice and creative research: 	  </p>
-       <ul>
-	    <li>✨ <a href="https://ko-fi.com/annreflection" target="_blank">Support small art or buy a sketch via Ko-fi</a></li>
-	    <li>👜 <a href="https://annreflection.square.site/" target="_blank">Browse lantern pieces and kits in my Art Shop</a></li>
-	    <li>📫 <a href="https://annreflection.substack.com" target="_blank">Read and reply to my Substack newsletter</a> — where I share insights across sumi-e, lantern building, access design, and service transformation</li>
+	<section id="connect-call">
+	  <h2>Stay Connected & Co-Create</h2>
+	  <p>Interested in a lantern-making or sumi-e storytelling workshop for your school, gallery, or community space? Let’s co-create accessible, sensory experiences together.</p>
+	
+	  <p>You can also support my small-scale art practice and inclusive arts research through a few offerings while I continue refining the full shop experience:</p>
+	  <ul>
+	    <li>🖼️ <a href="https://annreflection.square.site/shop/sumi-e-painting-large-banner/7" target="_blank">Original sumi-e paintings</a> – one-of-a-kind plein-air and brushwork pieces</li>
+	    <li>✨ <a href="https://ko-fi.com/c/e004b270d4" target="_blank">$6 custom art cards via Ko-fi</a> – tiny works made to order</li>
+	    <li>🎁 <a href="https://annreflectionarts.square.site/shop/suprise-packs/25" target="_blank">$5 surprise packs</a> – joyful sensory bundles</li>
 	  </ul>
-	<p>
-	    I’d love to hear what kind of content you’d like more of — art techniques, access culture, reflections on care, or project walkthroughs? <strong>Reply anytime on Substack or email me at annreflection at gmail dot com.</strong>
-        </p>
-    </section>
+	
+	  <p>For reflections on access design, brushwork process, or upcoming projects, you can also subscribe to:</p>
+	  <ul>
+	    <li>📫 <a href="https://annreflection.substack.com" target="_blank">My Substack newsletter</a> – stories and sketches from the studio</li>
+	  </ul>
+	
+	  <p>I’d love to hear what kind of content you’d like more of—art techniques, access culture, or collaborative walkthroughs. Reply anytime on Substack or email me at annreflection [at] gmail [dot] com.</p>
+	</section>
+
 
   </main>
 
